[SC] Fix PSX texture shading atlas management issues.